# EasyToTrackGS_ESP32

./: CMakeLists.txt  Makefile  README.md  partitions.csv  sdkconfig
atmega_hex/: GroundSt.hex
main/: BThelper.c  BThelper.h  CMakeLists.txt  Kconfig  define.h  m8_programmer.c  m8_programmer.h  main.c  protocol_detection.c  protocol_detection.h  telem.c  telem.h  tracker.c  tracker.h  u8g2_esp32_hal.c  u8g2_esp32_hal.h  user_main.c
main/components/avr-isp/: CMakeLists.txt  avr_isp_helper.c  avr_isp_helper.h
main/components/protocols/: CMakeLists.txt  frskyd.c  frskyd.h  frskyx.c  frskyx.h  pitlab.c  pitlab.h  rvosd.c  rvosd.h  simple_bin.c  simple_bin.h  tiny_ltm.c  tiny_ltm.h  tiny_mavlink.c  tiny_mavlink.h  tiny_msp.c  tiny_msp.h
main/components/tpl0401x/: CMakeLists.txt  tpl0401x.c  tpl0401x.h
main/components/wifi-manager/: CMakeLists.txt  Kconfig
main/components/wifi-manager/src/: wifi_manager.c  wifi_manager.h
main/tasks/: monitoring_task.c  monitoring_task.h  oled_task.c  oled_task.h  send_to_host_task.c  send_to_host_task.h  servo_task.c  servo_task.h  tcp_server_task.c  tcp_server_task.h  uart_task.c  uart_task.h
